--- a/config/default/crds/serving_v1alpha2_kfservice.yaml
+++ b/config/default/crds/serving_v1alpha2_kfservice.yaml
@@ -491,6 +491,8 @@ spec:
               type: array
             default:
               type: object
+            host:
+              type: string
             observedGeneration:
               description: ObservedGeneration is the 'Generation' of the Service that
                 was last processed by the controller.
